# mathprog

./: .gitignore  README.md  hello.py  plots.py  pyproject.toml
mathprog-ex1/src/mathprog_ex1/: __init__.py  ex1.1.py  ex1.2.py  ex1.3.py
mathprog-programming/: README.md
mathprog-programming/src/kmst/: benchmarking.py  kmst.py  model.py  model_refactor.py  util.py  visuals.py
